Added Weather API support

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:100,400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="weather.css">
 </head>
 
 <body>
+    <div id="weather"></div>
     <div id="clock"></div>
     <div id="credits">2015 | By Harvey Shi</div>
     <!-- JS Scripts -->
     <script type="text/javascript" src="../js/jquery.js"></script>
+    <script type="text/javascript" src="./js/jquery.simpleWeather.min.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
