Added Bus Tracker + UI Changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
 <body>
     <div id="weather"></div>
     <div id="clock"></div>
-    <div id="credits">2015 | By Harvey Shi</div>
+    <div id="buses">
+        <div id="west">
+            <div class="title">To West</div>
+            <span class="arrivals"></span>
+        </div>
+        <div id="east">
+            <div class="title">To East</div>
+            <div class="arrivals"></div>
+        </div>
+    </div>
+    <div id="credits">2015 Harvey Shi</div>
     <!-- JS Scripts -->
     <script type="text/javascript" src="../js/jquery.js"></script>
     <script type="text/javascript" src="./js/jquery.simpleWeather.min.js"></script>
