--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="../favicon-16x16.png" sizes="16x16" />
 
     <!-- Stylesheets & Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:100,400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="weather.css">
@@ -20,6 +20,7 @@
 <body>
     <div id="weather"></div>
     <div id="clock"></div>
+    <div id="date"></div>
     <div id="buses">
         <div id="west">
             <div class="title">To West</div>
