Added new voice message

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
     <div id="mainPage">
         <div id="notifications">
-            <div class="notify" id="good">✓ Success</div>
-            <div class="notify" id="bad">Nope</div>
+            <div class="notify" id="good"></div>
+            <div class="notify" id="bad"></div>
         </div>
 
         <div id="weather"></div>
