Added close button for the modal and name presets.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 
 <body>
     <div id="modal">
+        <div id="close">&#215;</div>
         <div id="minutes">
             <div>
             </div>
         </div>
         <div id="name_holder">
             <div>
-                <input type="text" id="name" placeholder="Type your name."> <span>Press enter to set alert.</span>
+                <input type="text" id="name" placeholder="Type your name."> <span>Press enter or click a button below to set alert.</span>
+                <div id="people_buttons"></div>
             </div>
         </div>
     </div>
