--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="icon" type="image/png" href="../favicon-16x16.png" sizes="16x16" />
 
     <!-- Stylesheets & Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arvo:400,400italic' rel='stylesheet' type='text/css'>
+    
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="weather.css">
     <link rel="stylesheet" type="text/css" href="animate.css">
