updated smarthome site, also unlocked mathgenius

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="arrivals"></div>
 			</div>
 		</div>
-		<div id="credits">2015 Harvey Shi</div>
+		<div id="credits">Created by Harvey Shi | Photo by <a href="https://www.nasa.gov/feature/top-15-earth-images-of-2015/">NASA</a></div>
 	</div>
 
 	<!-- Sound Effects -->
