Adds local Jquery script.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="arrivals"></div>
 			</div>
 		</div>
-		<div id="credits">Created by Harvey Shi | Photo by <a href="https://www.nasa.gov/feature/top-15-earth-images-of-2015/">NASA</a></div>
+		<div id="credits">A Duke Smart Home Project | Photo by <a href="https://www.nasa.gov/feature/top-15-earth-images-of-2015/">NASA</a></div>
 	</div>
 
 	<!-- Sound Effects -->
@@ -59,7 +59,7 @@
 	</audio>
 
 	<!-- JS Scripts -->
-	<script type="text/javascript" src="../js/jquery.js"></script>
+	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.simpleWeather.min.js"></script>
 	<script type="text/javascript" src="./js/Chart.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
